crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__shared_root__all_fields-graph.snap
---
source: engine/crates/engine/query-solver/src/tests/shared_root.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"price\" ]\n    2 [ label = \"category\" ]\n    3 [ label = \"id\" ]\n    4 [ label = \"name\" ]\n    5 [ label = \"products\" ]\n    6 [ label = \"Root#category\", shape=parallelogram, color=dodgerblue ]\n    7 [ label = \"products#category\", shape=box, color=dodgerblue ]\n    8 [ label = \"Root#name\", shape=parallelogram, color=dodgerblue ]\n    9 [ label = \"products#name\", shape=box, color=dodgerblue ]\n    10 [ label = \"Root#price\", shape=parallelogram, color=dodgerblue ]\n    11 [ label = \"products#price\", shape=box, color=dodgerblue ]\n    12 [ label = \"id#price\", shape=box, color=dodgerblue ]\n    13 [ label = \"price#price\", shape=box, color=dodgerblue ]\n    14 [ label = \"name#name\", shape=box, color=dodgerblue ]\n    15 [ label = \"id#name\", shape=box, color=dodgerblue ]\n    16 [ label = \"id#category\", shape=box, color=dodgerblue ]\n    17 [ label = \"category#category\", shape=box, color=dodgerblue ]\n    0 -> 5 [ label = \"\" ]\n    0 -> 6 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 6 [ label = \"\", style=dashed,arrowhead=none ]\n    6 -> 7 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    7 -> 5 [ label = \"\", color=violet,arrowhead=none ]\n    0 -> 8 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 8 [ label = \"\", style=dashed,arrowhead=none ]\n    8 -> 9 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    9 -> 5 [ label = \"\", color=violet,arrowhead=none ]\n    0 -> 10 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 10 [ label = \"\", style=dashed,arrowhead=none ]\n    10 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    11 -> 5 [ label = \"\", color=violet,arrowhead=none ]\n    5 -> 4 [ label = \"\" ]\n    5 -> 3 [ label = \"\" ]\n    11 -> 12 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    12 -> 3 [ label = \"\", color=violet,arrowhead=none ]\n    5 -> 2 [ label = \"\" ]\n    5 -> 1 [ label = \"\" ]\n    11 -> 13 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    13 -> 1 [ label = \"\", color=violet,arrowhead=none ]\n    9 -> 14 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    14 -> 4 [ label = \"\", color=violet,arrowhead=none ]\n    9 -> 15 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    15 -> 3 [ label = \"\", color=violet,arrowhead=none ]\n    7 -> 16 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    16 -> 3 [ label = \"\", color=violet,arrowhead=none ]\n    7 -> 17 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    17 -> 2 [ label = \"\", color=violet,arrowhead=none ]\n}\n"
---
digraph {
    0 [ root]
    1 [ price]
    2 [ category]
    3 [ id]
    4 [ name]
    5 [ products]
    6 [ Root#category]
    7 [ products#category]
    8 [ Root#name]
    9 [ products#name]
    10 [ Root#price]
    11 [ products#price]
    12 [ id#price]
    13 [ price#price]
    14 [ name#name]
    15 [ id#name]
    16 [ id#category]
    17 [ category#category]
    0 -> 5 [ label = "Field" ]
    0 -> 6 [ label = "CreateChildResolver" ]
    0 -> 6 [ label = "HasChildResolver" ]
    6 -> 7 [ label = "CanProvide" ]
    7 -> 5 [ label = "Provides" ]
    0 -> 8 [ label = "CreateChildResolver" ]
    0 -> 8 [ label = "HasChildResolver" ]
    8 -> 9 [ label = "CanProvide" ]
    9 -> 5 [ label = "Provides" ]
    0 -> 10 [ label = "CreateChildResolver" ]
    0 -> 10 [ label = "HasChildResolver" ]
    10 -> 11 [ label = "CanProvide" ]
    11 -> 5 [ label = "Provides" ]
    5 -> 4 [ label = "Field" ]
    5 -> 3 [ label = "Field" ]
    11 -> 12 [ label = "CanProvide" ]
    12 -> 3 [ label = "Provides" ]
    5 -> 2 [ label = "Field" ]
    5 -> 1 [ label = "Field" ]
    11 -> 13 [ label = "CanProvide" ]
    13 -> 1 [ label = "Provides" ]
    9 -> 14 [ label = "CanProvide" ]
    14 -> 4 [ label = "Provides" ]
    9 -> 15 [ label = "CanProvide" ]
    15 -> 3 [ label = "Provides" ]
    7 -> 16 [ label = "CanProvide" ]
    16 -> 3 [ label = "Provides" ]
    7 -> 17 [ label = "CanProvide" ]
    17 -> 2 [ label = "Provides" ]
}
