crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__shared_root__all_fields-solved.snap
---
source: crates/engine/query-solver/src/tests/shared_root.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"Product.id\", color=forestgreen style=bold ]\n    2 [ label = \"Root#price\", shape=parallelogram, color=forestgreen style=bold ]\n    3 [ label = \"Root#category\", shape=parallelogram, color=forestgreen style=bold ]\n    2 -> 1 [ color=royalblue,fontcolor=royalblue,style=dashed ]\n    0 -> 2 [ label = \"10\", color=forestgreen,fontcolor=forestgreen ]\n    0 -> 1 [ label = \"1\", color=forestgreen,fontcolor=forestgreen ]\n    3 -> 1 [ color=royalblue,fontcolor=royalblue,style=dashed ]\n    0 -> 3 [ label = \"10\", color=forestgreen,fontcolor=forestgreen ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "Product.id", steiner=1 ]
    2 [ label = "Root#price", steiner=1 ]
    3 [ label = "Root#category", steiner=1 ]
    2 -> 1 [ cost=0, steiner=0]
    0 -> 2 [ cost=10, steiner=1]
    0 -> 1 [ cost=1, steiner=1]
    3 -> 1 [ cost=0, steiner=0]
    0 -> 3 [ cost=10, steiner=1]
}
