crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__shared_root__nested_id_with_all_fields-solved.snap
---
source: crates/engine/query-solver/src/tests/shared_root.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"Nested.id\", color=forestgreen ]\n    2 [ label = \"Root#price\", shape=parallelogram, color=forestgreen ]\n    3 [ label = \"Root#name\", shape=parallelogram, color=forestgreen ]\n    4 [ label = \"Root#category\", shape=parallelogram, color=forestgreen ]\n    2 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    0 -> 2 [ label = \"10 \", color=forestgreen,fontcolor=forestgreen ]\n    3 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    0 -> 3 [ label = \"10 \", color=forestgreen,fontcolor=forestgreen ]\n    4 -> 1 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    0 -> 4 [ label = \"10 \", color=forestgreen,fontcolor=forestgreen ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "Nested.id", steiner=1 ]
    2 [ label = "Root#price", steiner=1 ]
    3 [ label = "Root#name", steiner=1 ]
    4 [ label = "Root#category", steiner=1 ]
    2 -> 1 [ cost=0, steiner=0]
    0 -> 2 [ cost=10, steiner=1]
    3 -> 1 [ cost=0, steiner=0]
    0 -> 3 [ cost=10, steiner=1]
    4 -> 1 [ cost=0, steiner=1]
    0 -> 4 [ cost=10, steiner=1]
}
