crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__shared_root__nested_id_with_all_fields-solver.snap
---
source: crates/engine/query-solver/src/tests/shared_root.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"Nested.id\" ]\n    2 [ label = \"Root#price\", shape=parallelogram ]\n    3 [ label = \"Root#name\", shape=parallelogram ]\n    4 [ label = \"Root#category\", shape=parallelogram ]\n    2 -> 1 [ color=royalblue,fontcolor=royalblue,style=dashed ]\n    0 -> 2 [ label = \"10\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    3 -> 1 [ color=royalblue,fontcolor=royalblue,style=dashed ]\n    0 -> 3 [ label = \"10\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    4 -> 1 [ color=royalblue,fontcolor=royalblue,style=dashed ]\n    0 -> 4 [ label = \"10\", color=royalblue,fontcolor=royalblue,style=dashed ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "Nested.id", steiner=0 ]
    2 [ label = "Root#price", steiner=0 ]
    3 [ label = "Root#name", steiner=0 ]
    4 [ label = "Root#category", steiner=0 ]
    2 -> 1 [ cost=0, steiner=0]
    0 -> 2 [ cost=10, steiner=0]
    3 -> 1 [ cost=0, steiner=0]
    0 -> 3 [ cost=10, steiner=0]
    4 -> 1 [ cost=0, steiner=0]
    0 -> 4 [ cost=10, steiner=0]
}
